--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,8 +12,9 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+# colours 
 set -g default-terminal "tmux-256color" 
 set-option -g status-style fg=colour247,bg=colour57
 set-option -g pane-border-style fg=colour214
 set-option -g pane-active-border-style fg=colour57
-set-window-option -g clock-mode-colour colour64 #green
+set-window-option -g clock-mode-colour colour64
