--- a/.config/autostart/Thunderbird.desktop
+++ b/.config/autostart/Thunderbird.desktop
@@ -4,7 +4,7 @@ Version=0.9.4
 Type=Application
 Name=Thunderbird
 Comment=
-Exec=bash -c "sleep 15 && thunderbird"
+Exec=bash -c "sleep 15 && thunderbird && wmctrl -lp | grep Thunderbird | awk '{print $1}' | xargs -I{} xdotool windowminimize {}"
 OnlyShowIn=XFCE;
 RunHook=0
 StartupNotify=false
